ingress.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mikhmon-app-ingress
  namespace: mikhmon-app
  labels:
    app: mikhmon-app
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: mikhmon-app-service
            port:
              number: 80
